--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -14,3 +14,17 @@ web_profiler:
 
 swiftmailer:
     disable_delivery: true
+
+security:
+    firewalls:
+        main:
+            http_basic: ~
+
+doctrine:
+    dbal:
+        driver:   pdo_mysql
+        host:     "%test_database_host%"
+        port:     "%test_database_port%"
+        dbname:   "%test_database_name%"
+        user:     "%test_database_user%"
+        password: "%test_database_password%"
